--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -2,6 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
+    <link href="/assets/styles/main.css" rel="stylesheet">
     <title>Blog</title></head>
 
   <body>
