layout(default): Add home link/header

--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -6,4 +6,9 @@
     <title>Blog</title></head>
 
   <body>
+    <header>
+      <nav>
+        <h1><a href="/">Deaches</a></h1>
+      </nav>
+    </header>
     {{ content -}}</body></html>
