--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -2,11 +2,18 @@ body {
     color: black;
     background-color: white;
 
-    width: 40rem;
+    max-width: 40rem;
     margin: 0 auto;
+    padding: 0 1ch;
 
     font-family: sans-serif;
     font-size: 1rem;
+}
+
+header nav {
+    font-size: 2rem;
+    font-variant-caps: all-petite-caps;
+    text-align: center;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -38,3 +45,11 @@ table {
         border-bottom: medium solid;
     }
 }
+
+/* "div" MUST be specified since the .highlighter-rouge
+ * class is used on both block and inline elements.
+ */
+div.highlighter-rouge {
+    overflow-x: scroll;
+}
+
