layout: New post layout

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -53,3 +53,12 @@ div.highlighter-rouge {
     overflow-x: scroll;
 }
 
+article header {
+    & h1 {
+        margin-bottom: 0;
+    }
+
+    & time {
+        color: grey;
+    }
+}
