style(main): Hide overflow scrollbar if unnecessary in code blocks

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -50,7 +50,7 @@ table {
  * class is used on both block and inline elements.
  */
 div.highlighter-rouge {
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 
 article header {
