--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -62,3 +62,10 @@ article header {
         color: grey;
     }
 }
+
+.framed {
+    padding: 1rem;
+    border: thin solid black;
+    border-radius: 0.5rem;
+    box-shadow: 0 0 0.25rem grey inset;
+}
